-*- mode: fundamental; mode: auto-fill -*-

0.3:
  * Add support for qualification of attributes and elements in
    schemas (issue #4, attributeFormDefault and elementFormDefault).
  * First version in changelog.